# vega

./: Makefile  pyproject.toml
bt/: __init__.py
bt/test/: test_init.py
cfg/: __init__.py
compass/: __init__.py
compass/test/: test_init.py
compass/test/data/: ti2023.param
core/: runners.py  sensiacore.py  utils.py  vgcore.py
core/TI22/: mlcore.py  sensiacore.py  visioncore.py
core/TI22/vgcore/: __init__.py  missions.py  modules.py
core/TI23/: gpiocore.py  mlcore.py  sensiacore.py
core/TI23/data/: ti2022.param
core/TI23/vgcore/: __init__.py  modules.py
core/TI23C/: mediacore.py  mlcore.py  uicore.py
core/TI23C/vgcore/: __init__.py  modules.py
core/basic/: sensiacore.py  vgcore.py
core/test/: test_runner.py
core/test/TI22/: test_ti22.py
core/test/TI23/: test_ti23.py
core/test/TI23C/: test_ti23c.py
core/test/basic/: test_basic.py
ctyper/: __init__.py
lumanos/: device.py  playground.py  utils.py
lumanos/TI23/: __init__.py
lumanos/test/: test_device.py  test_init.py  test_playground.py
ml/: __init__.py  utils.py
ml/test/: test_init.py
ml/test/data/: test.param
pin/: __init__.py  matrix.py  utils.py
pin/test/: test_matrix.py
sensia/: __init__.py  utils.py
sensia/test/: test_init.py  test_utils.py
vision/: __init__.py
vision/TI22/: __init__.py  toolbox.py  utils.py
vision/TI23/: __init__.py
vision/test/TI22/: test_init.py  test_utils.py
vision/test/TI22/data/: depth0.npy  depth1.npy  depth2.npy  depth3.npy
