[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vega"
dynamic = ["version"]
description = "TI2023"
authors = [
  { name = "Sped0n<github.com/Sped0n>", email = "realsped0n@outlook.com" },
]
requires-python = ">=3.11.0"

[tool.pyright]
venvPath = "/Users/spedon/anaconda3/envs/drone2023/"
venv = "drone2023"
